--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <title>Webová aplikace</title>
   </head>
   <body>
-    <div class="page">
+    <div id="app"></div>
+    <!-- <div class="page">
       <header>
         <div class="header__content container">
           <div class="site-logo"></div>
@@ -169,6 +170,6 @@
           </div>
         </div>
       </footer>
-    </div>
+    </div> -->
   </body>
 </html>
